--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "madnh/mrequest",
   "description": "cURL class for PHP",
+  "version": "1.0.0",
   "keywords": [
     "madnh",
     "curl",
@@ -21,7 +22,7 @@
   },
   "autoload": {
     "psr-4": {
-      "MaDnh": "MaDnh/"
+      "MaDnh\\": "src/"
     }
   },
   "repositories": [
