Update Composer package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "madnh/mrequest",
+  "name": "madnh/request",
   "description": "cURL class for PHP",
   "version": "1.2.3",
   "keywords": [
