--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "madnh/request",
-  "description": "cURL class for PHP",
-  "version": "1.2.3",
+  "description": "cURL wrapper",
+  "version": "1.3.0",
   "keywords": [
     "madnh",
     "curl",
